models in gateway konfigurierbar
